--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "koperasi-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kelvin100498.github.io/KKMPSELAYUR",
+  "homepage": "https://kkmpsungaiselayur.site",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
